devops/kubernetes/manifests/gateway-class-01.yaml
# GatewayClass — typically created once by the platform team.

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: alb-gateway-class
spec:
  controllerName: gateway.k8s.aws/alb
