devops/kubernetes/manifests/fluent-bit.yaml
# Fluent Bit daemon set example. This is what you want to choose almost always
# for logs if you are not using OTel.

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: logging
  labels:
    app: fluent-bit
spec:
  selector:
    matchLabels:
      app: fluent-bit

  template:
    metadata:
      labels:
        app: fluent-bit
    spec:
      serviceAccountName: fluent-bit
      tolerations:
        # Run on all nodes, including tainted ones
        - operator: Exists
################################################################################
# Container
################################################################################
      containers:
        - name: fluent-bit
          image: fluent/fluent-bit:3.0
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            # Mount node log directory.
            - name: varlog
              mountPath: /var/log
              readOnly: true
            # Mount container runtime log directory.
            - name: varlogpods
              mountPath: /var/log/pods
              readOnly: true
            # FluentBit configuration.
            - name: config
              mountPath: /fluent-bit/etc/
################################################################################
# Volumes 
################################################################################
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlogpods
          hostPath:
            path: /var/log/pods
        - name: config
          configMap:
            name: fluent-bit-config
