devops/kubernetes/manifests/gateway-01.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-app-gateway
  namespace: test
spec:
  # Must match the GatewayClass name.
  gatewayClassName: alb-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: my-tls-cert  # References a Secret, or use ACM via annotation.
    #   allowedRoutes:
    #     namespaces:
    #       from: Same
